--- a/musician.html
+++ b/musician.html
@@ -10,8 +10,8 @@
   integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <h2 >Musician guess by Haribabu Darapaneni</h2>
+    <div class="container p-1 my-1 bg-secondary text-white">
+    <h2 >Musician guess by Haribabu Darapaneni</h2></div>
 
 <form class="form-group">
     <label for="form1_secret">Enter the secret musician name</label>
